--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
           <div id="school" class="bg-gray-100 rounded-tl-lg rounded-tr-lg">
               <div class="text-center">
                 <!--School-->
-                <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-10 m-5 shadow-md">
                 <!--School img-->
                 <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300">
                 <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
@@ -119,7 +119,7 @@
               </div>
               <!--Skills-->
               <h1 id="skills" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Skills</h1>
-              <div class="bg-white text-black  rounded-xl p-10 m-5 shadow-sm">
+              <div class="bg-white text-black  rounded-xl p-10 m-5 shadow-md">
                 <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                   <!--HTML-->
                   <div class="mb-5">
@@ -167,8 +167,8 @@
               <h1 id="projects" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
 
               <!-- Live Waveform -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://github.com/amuwhao46/nowplaying" target="_blank">
@@ -186,15 +186,13 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
-                    <img src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="250">
-                  </div>
+                    <img class="mx-auto md:rounded-none w-30" src="images/LiveWaveform.png" alt="Mockup of future project using Spotify" width="250">
                 </div>
               </div>
               <!-- End Live Waveform -->
               <!-- Playlist Covers -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://www.figma.com/file/wbxXLggR5uTiDMxChygNsr/Playlist-Cover?node-id=0%3A1" target="_blank">
@@ -207,15 +205,15 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
-                    <img src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
+                  <div class="">
+                    <img class="mx-auto" src="images/PlaylistCover.png" alt="Playlist designs from figma" width="250">
                   </div>
                 </div>
               </div>
               <!-- End Playlist Covers -->
               <!-- Spotify Mockup -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <a href="https://www.figma.com/file/5NJoulTAhCrqaZjrRIw6ju/Song-control?node-id=0%3A1" target="_blank">
@@ -228,8 +226,8 @@
                       </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
-                    <img src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="500">
+                  <div class="">
+                    <img class="mx-auto" src="images/SpotifyMock.png" alt="Spotify mock design from Figma" width="500">
                   </div>
                 </div>
               </div>
@@ -238,8 +236,8 @@
               <!--Work Experience-->
               <h1 id="experience" class="text-3xl text-left text-pink-800 font-bold pt-5 ml-10">Work Experience</h1>
               <!-- Allstate -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <h1 class="text-pink-800 text-2xl font-bold">Allstate</h1>
@@ -261,16 +259,15 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
-                    <img src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
+                  <div class="flex justify-end">
+                    <img class="mx-auto" src="images/Allstate.svg" alt="Image of the Allstate logo" width="250">
                   </div>
                 </div>
               </div>
-
               <!-- End Allstate -->
               <!-- Apple -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <h1 class="text-pink-800 text-2xl font-bold">Apple</h1>
@@ -286,15 +283,15 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
-                    <img src="images/Apple.svg" alt="Image of the Apple logo" width="250">
+                  <div class="">
+                    <img class="mx-auto" src="images/Apple.svg" alt="Image of the Apple logo" width="250">
                   </div>
                 </div>
               </div>
               <!-- End Apple -->
               <!-- Postogon -->
-              <div class="bg-white rounded-xl p-10 m-5 shadow-sm">
-                <div class="grid grid-cols-1 md:grid-cols-2">
+              <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+                <div class="md:flex">
                   <!-- Left container -->
                   <div class="p-10 md:text-left">
                     <h1 class="text-pink-800 text-2xl font-bold">Postogon</h1>
@@ -309,9 +306,9 @@
                     </p>
                   </div>
                   <!-- Right container -->
-                  <div class="flex justify-end mx-auto">
+                  <div class="">
                     <div class="w-250 rounded-full bg-white">
-                      <img src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
+                      <img class="mx-auto" src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
 
                     </div>
                   </div>
@@ -322,7 +319,7 @@
               <!--Footer-->
               <footer>
                 <h1 id="contacts" class="text-pink-800 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
-                <div class="bg-white rounded-xl p-5 m-5 shadow-sm">
+                <div class="bg-white rounded-xl p-5 m-5 shadow-md">
                   <div class="p-4">
                     <div class="flex flex-row justify-center">
                       <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
