--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <!--Header-->
     <header>
       <!--Navbar-->
-      <nav id="navbar" class="fixed bg-gray-200/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
+      <nav id="navbar" class="fixed bg-gray-200/50 dark:bg-neutral-600/50 backdrop-blur inset-x-0 flex flex-center justify-between flex-wrap p-5 z-5 md:mx-10 md:mt-5 shadow-xl md:rounded-lg rounded-bl-lg rounded-br-lg">
         <a href="#">
           <div class="text-fuchsia-700 flex items-center flex-shrink-0 mr-6">
             <img class="fill-current h-8 w-8 mr-2" src="images/Logo.svg" alt="Logo" width="20">
@@ -34,7 +34,7 @@
           </button>
         </div>
         <div id="content" class="w-full hidden transition-all ease-in-out md:flex md:items-center md:w-auto">
-          <div class="text-sm md:flex-grow">
+          <div class="dark:text-white text-sm md:flex-grow">
             <a href="#school" class="hover:text-yellow-500 transition block mt-4 md:inline-block mr-4 md:mt-0">About</a>
             <a href="#skills" class="hover:text-yellow-500 transition block mt-4 md:inline-block mr-4 md:mt-0">Skills</a>
             <a href="#projects" class=" hover:text-yellow-500 transition block mt-4 md:inline-block md:mt-0 mr-4">Projects</a>
@@ -78,10 +78,10 @@
           <img class="mx-auto" src="images/Logo.svg" alt="Logo" width="80"> <!--Logo-->
         </div>
         <!--Content-->
-        <div id="school" class="bg-gray-100 rounded-tl-lg rounded-tr-lg">
+        <div id="school" class="bg-gray-100 dark:bg-black rounded-tl-lg rounded-tr-lg">
           <div class="text-center">
             <!--School-->
-            <div class="bg-white rounded-xl p-10 m-5 shadow-md">
+            <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 m-5 shadow-md">
               <!--School img-->
               <img class="w-60 h-60 rounded-full border-solid border border-black mx-auto shadow-lg" src="images/School.svg" alt="School glyph" width="300">
               <h1 class="text-3xl font-bold pt-10">Wayne State University</h1>
@@ -131,7 +131,7 @@
             </div>
             <!--Skills-->
             <h1 id="skills" class="text-3xl text-left text-fuchsia-700 font-bold pt-5 ml-10">Skills</h1>
-            <div class="bg-white text-black  rounded-xl p-10 m-5 shadow-md">
+            <div class="bg-white text-black dark:bg-neutral-900 dark:text-white  rounded-xl p-10 m-5 shadow-md">
               <div class="grid grid-cols-2 md:grid-cols-4 gap-6 pt-10">
                 <!--HTML-->
                 <div class="mb-5">
@@ -178,7 +178,7 @@
                 <!--Projects-->
                 <h1 id="projects" class="text-fuchsia-700 text-3xl text-left font-bold pt-5 ml-10">Projects</h1>
                 <!-- Live Waveform -->
-                <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                   <div class="md:flex">
                     <!-- Left container -->
                     <div class="p-10 md:text-left">
@@ -204,7 +204,7 @@
                 <!-- End Live Waveform -->
                 <div class="md:flex">
                   <!-- Playlist Covers -->
-                  <div class="bg-white rounded-xl p-10 md:p-0  m-5 shadow-md">
+                  <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0  m-5 shadow-md">
                     <div class="">
                       <!-- Left container -->
                       <div class="p-10  md:text-left">
@@ -225,7 +225,7 @@
                   </div>
                   <!-- End Playlist Covers -->
                   <!-- Music Mockup -->
-                  <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                  <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                     <div class="">
                       <!-- Left container -->
                       <div class="p-10 md:text-left">
@@ -251,7 +251,7 @@
                 <!--Work Experience-->
                 <h1 id="experience" class="text-3xl text-left text-fuchsia-700 font-bold pt-5 ml-10">Work Experience</h1>
                 <!-- Allstate -->
-                <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                   <div class="md:flex">
                     <!-- Left container -->
                     <div class="p-10 md:text-left grow">
@@ -281,7 +281,7 @@
                 </div>
                 <!-- End Allstate -->
                 <!-- Apple -->
-                <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                   <div class="md:flex">
                     <!-- Left container -->
                     <div class="p-10 md:text-left grow">
@@ -305,7 +305,7 @@
                 </div>
                 <!-- End Apple -->
                 <!-- Postogon -->
-                <div class="bg-white rounded-xl p-10 md:p-0 m-5 shadow-md">
+                <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-10 md:p-0 m-5 shadow-md">
                   <div class="md:flex">
                     <!-- Left container -->
                     <div class="p-10 md:text-left grow">
@@ -321,10 +321,8 @@
                       </p>
                     </div>
                     <!-- Right container -->
-                    <div class="">
-                      <div class="md:p-10">
-                        <img class="mx-auto p-5" src="images/Postogon.png" alt="Image of the Postogon Logo" width="250">
-                      </div>
+                    <div class="md:p-10">
+                      <img class="mx-auto" src="images/Postogon.svg" alt="Image of the Postogon Logo" width="250">
                     </div>
                   </div>
                 </div>
@@ -333,7 +331,7 @@
                 <!--Footer-->
                 <footer>
                   <h1 id="contacts" class="text-fuchsia-700 text-3xl text-left font-bold pt-5 ml-10">Contact</h1>
-                  <div class="bg-white rounded-xl p-5 m-5 shadow-md">
+                  <div class="bg-white dark:bg-neutral-900 dark:text-white rounded-xl p-5 m-5 shadow-md">
                     <div class="p-4">
                       <div class="flex flex-row justify-center">
                         <a href="https://www.linkedin.com/in/oke-oghene-amuwha-1b1489203/" target="_blank">
